# IFRS_9_Auto_Model

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
ifrs9-platform/: .env.example  .gitignore  Dockerfile  Dockerfile.worker  IFRS9_Requirements_Spec (2).md  README.md  RUNNING_APPS.md  alembic.ini  docker-compose.yml  pyproject.toml  start_api.sh  start_dashboard.sh
ifrs9-platform/alembic/: env.py
ifrs9-platform/alembic/versions/: a2164e1442c3_initial_schema.py  add_instrument_fields.py  dfd8e5f83cdc_add_import_approval_workflow.py  phase1_enhancements.py  update_ccf_config.py  update_staging_override.py
ifrs9-platform/docs/: API_ENDPOINTS_SUMMARY.md  API_GUIDE.md  DASHBOARD_GUIDE.md  DATABASE_SETUP.md  DATA_IMPORT_SUMMARY.md  IFRS9_Requirements_Spec.docx  MVP_STATUS.md  OPTION_A_DEMO_RESULTS.md  OPTION_A_IMPLEMENTATION_SUMMARY.md  OPTION_A_QUICK_START.md  PHASE1_IMPLEMENTATION_STATUS.md  PHASE1_SERVICES_COMPLETED.md  PHASE1_SERVICES_IMPLEMENTATION_COMPLETE.md  PHASE1_VALIDATION_COMPLETE.md  QUICKSTART.md  SCOPE_GAP_ANALYSIS.md  scope_revision
ifrs9-platform/docs/sample_data/: customers.csv  loans.csv  scenarios.csv
ifrs9-platform/frontend/: README.md  package-lock.json  package.json
ifrs9-platform/frontend/src/: App.css  App.tsx
ifrs9-platform/scripts/: create_sample_data.py  demo_api.sh  generate_migration.py  import_raw_data.py  quick_test_run.py  test_ecl_api.py  test_phase1_services.py
ifrs9-platform/src/: __init__.py
ifrs9-platform/test_data/: raw_data.xlsx  ~$Copy of Analysis_Mar_2025.xlsx
ifrs9-platform/tests/: test_phase1_critical.py
(+149 files in other folders)
